# KanjiReadingFrequency

./: .gitignore  Cargo.toml  README.md
src/: frequency_index.rs  joto_resources.rs  lib.rs  main.rs
src/scan/: mod.rs  sentences.rs  words.rs
