[package]
name = "reading_frequency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
itertools = "0.10.3"
rayon = "1.5.1"
serde = "1.0.136"
serde_derive = "1.0.136"
resources = { path = "../jotoba/lib/resources"}
types = { path = "../jotoba/lib/types"}
japanese = { path = "../jotoba/lib/japanese"}
indicatif = "0.16.2"
igo-unidic = { git = "https://github.com/JojiiOfficial/igo-unidic" }
once_cell = "1.9.0"
