[package]
name = "reading_frequency"
version = "0.1.0"
license = "GPLv3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = "1.0.136"
serde_derive = "1.0.136"
itertools = "0.10.3"
resources = { path = "../jotoba/lib/resources", optional = true}
types = { path = "../jotoba/lib/types", optional = true}
japanese = { path = "../jotoba/lib/japanese", optional = true}
indicatif = { version ="0.16.2", optional = true}

[features]
default = ["all"]
all = ["resources","types","types","japanese","indicatif"]
