[package]
name = "kanji_reading_freq"
version = "0.1.0"
license = "GPLv3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.136", features = ["derive"]}
itertools = {version = "0.10.3", optional = true}
bincode = {version = "1.3.3", optional = true}
resources = { path = "../jotoba/lib/resources", optional = true}
types = { path = "../jotoba/lib/types", optional = true}
japanese = { path = "../jotoba/lib/japanese", optional = true}
indicatif = { version ="0.16.2", optional = true}

[lib]
name = "kanji_reading_freq"
path = "src/lib.rs"

[features]
default = ["all"]
all = ["resources","types","types","japanese","indicatif","bincode","itertools"]
